[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/parts/PartCharacterExplorer.gd" type="Script" id=1]
[ext_resource path="res://ui/components/ComponentCharacterList.tscn" type="PackedScene" id=2]

[node name="Explorer" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.0
margin_top = -191.0
margin_right = 189.0
margin_bottom = 191.0
rect_min_size = Vector2( 300, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 371.0
margin_bottom = 375.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 364.0
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 364.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 320.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Personajes"
valign = 1

[node name="ButtonClose" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 324.0
margin_right = 364.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 0 )
text = "x"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 364.0
margin_bottom = 28.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 364.0
margin_bottom = 368.0
size_flags_vertical = 7

[node name="CharacterList" parent="VBoxContainer/MarginContainer2" instance=ExtResource( 2 )]
margin_right = 364.0
margin_bottom = 336.0

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/ButtonClose" to="." method="_on_ButtonClose_pressed"]
[connection signal="selected_item" from="VBoxContainer/MarginContainer2/CharacterList" to="." method="_on_CharacterList_selected_item"]
